--- a/fragments/nav.html
+++ b/fragments/nav.html
@@ -6,7 +6,7 @@
         <a href="weather.html">Weather</a>
     </li>
     <li>
-        <a href="#">Shortcuts</a>
+        <a href="sports.html">Sports</a>
     </li>
     <li>
         <a href="#">Overview</a>
