--- a/css/style.styl
+++ b/css/style.styl
@@ -4,8 +4,15 @@
 body
 	background url('../img/main_bg.png')
 
+ul 
+	list-style-type none
+	padding 0
+
 #sidebar-wrapper
 	background url('../img/sidebar_bg.png')
+
+.story
+	display none
 
 /*===========================================================*/
 /*                       RETINA IMAGES                       */
